--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,5 @@
+/** @type {import('@types/eslint').Linter.BaseConfig} */
+
 {
   "compilerOptions": {
     "target": "ES2020",
@@ -21,6 +23,7 @@
 
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src"],
+  
+  "include": ["src", "vite.config.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
